# treinamentoVisaoSPL

./: .gitignore  README.md
semana01/: CMakeLists.txt  main.cpp
semana01/.clangd/index/: main.cpp.2C86B5843074FDA7.idx
semana02/: main.cpp
semana02/.clangd/index/: main.cpp.86B7E6449BF289A1.idx
semana03/: CMakeLists.txt  main.cpp
semana03/.clangd/index/: main.cpp.7C55EF421F8B380F.idx
semana04/: main.cpp
semana05/: CMakeLists.txt  compile_commands.json  img_processing.cpp  img_processing.h  main.cpp
semana06/: main.cpp
semana07/: main.cpp
testeCamCalibration/: CMakeLists.txt  main.cpp
